--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -292,7 +292,7 @@ button {
 }
 
 .section-title--keycolor {
-  background-color: #39b54a;
+  background-color: #4169e1;
 }
 
 .section-title--story {
