--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,7 +239,7 @@ button {
 * Color
 *********************/
 .bg-color--keycolor {
-  background-color: #39b54a;
+  background-color:#6495ed;
 }
 
 .bg-color--subcolor {
@@ -307,7 +307,7 @@ button {
   line-height: 1.06667;
   margin: 0;
   padding-bottom: 15px;
-  color: #006837;
+  color: #6495ed;
 }
 
 .section-title--border::after {
@@ -336,7 +336,7 @@ button {
   display: block;
   text-decoration: none;
   cursor: pointer;
-  background-color: #006837;
+  background-color: #6495ed;
   color: #fff;
   font-size: 24px;
   line-height: 1.54167;
@@ -453,7 +453,7 @@ button {
 }
 
 .clear-message {
-  background-color: #d9e021;
+  background-color: #87cefa;
   padding: 30px 30px 60px;
   position: relative;
 }
