--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,7 @@ button {
   display: block;
   border: none;
   margin: 0 auto;
-  background-color: #006837;
+  background-color: #4169e1;
   color: #fff;
   width: 287px;
   height: 55px;
@@ -243,7 +243,7 @@ button {
 }
 
 .bg-color--subcolor {
-  background-color: #d9e021;
+  background-color: #87cefa;
 }
 
 .bg-color--gray {
